@@ -14,10 +14,12 @@
 #It drives ivy and the generation of a maven POM
 
 #These are the versions of our Hadoop 2 dependencies (core and other libs separated and in alphabetical order)
-hadoop-common.version=2.7.3
-hadoop-hdfs.version=2.7.3
-hadoop-mapreduce.version=2.7.3
+hadoop-common.version=2.10.2
+hadoop-hdfs.version=2.10.2
+hadoop-mapreduce.version=2.10.2
 
 accumulo.version=1.5.0
-netty.version=3.6.6.Final
-netty-all.version=4.0.23.Final
+netty.version=3.10.6.Final
+netty-all.version=4.1.50.Final
+tez.version=0.9.2
+servlet-api.version=2.5
