@@ -14,12 +14,14 @@
 #It drives ivy and the generation of a maven POM
 
 #These are the versions of our Hadoop 3 dependencies (core and other libs separated and in alphabetical order)
-hadoop-common.version=3.1.1
-hadoop-hdfs.version=3.1.1
-hadoop-mapreduce.version=3.1.1
+hadoop-common.version=3.2.4
+hadoop-hdfs.version=3.2.4
+hadoop-mapreduce.version=3.2.4
 
 accumulo.version=1.6.0
-netty.version=3.10.5.Final
+netty.version=3.10.6.Final
 codahale.metrics-core.version=3.0.1
-netty-all.version=4.1.0.Beta5
+netty-all.version=4.1.77.Final
 re2j.version=1.0
+tez.version=0.10.2
+servlet-api.version=3.1.0
