@@ -17,7 +17,7 @@
 apacheant.version=1.7.1
 apacherat.version=0.8
 automaton.version=1.11-8
-avro.version=1.7.5
+avro.version=1.7.7
 basjes-httpdlog-pigloader.version=5.0
 commons-beanutils.version=1.9.4
 commons-cli.version=1.5.0
@@ -63,8 +63,6 @@ rhino.version=1.7R2
 antlr.version=3.4
 stringtemplate.version=4.0.4
 log4j.version=1.2.16
-netty.version=3.6.6.Final
-netty-all.version=4.1.17.Final
 rats-lib.version=0.5.1
 slf4j-api.version=1.6.1
 slf4j-log4j12.version=1.6.1
@@ -75,7 +73,6 @@ xalan.version=2.7.1
 wagon-http.version=1.0-beta-2
 zookeeper.version=3.4.5
 servlet.version=4.0.6
-servlet-api.version=2.5
 protobuf-java.version=2.5.0
 metrics-core.version=2.1.2
 guice.version=3.0
@@ -86,15 +83,16 @@ mockito.version=1.8.4
 jansi.version=1.9
 asm.version=3.3.1
 snappy-java.version=1.1.1.3
-tez.version=0.7.0
 parquet-pig-bundle.version=1.9.0
 snappy.version=0.2
 leveldbjni.version=1.8
 curator.version=2.6.0
 htrace.version=3.2.0-incubating
 htrace4.version=4.0.1-incubating
-commons-lang3.version=3.6
+commons-lang3.version=3.12.0
 scala-xml.version=1.0.5
 glassfish.el.version=3.0.1-b08
 roaring-bitmap-shaded.version=0.7.14
 dependency-check-ant.version=5.2.4
+woodstox.version=5.3.0
+stax2-api.version=4.2.1
